[package]
name = "git-visualiser"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A terminal-based Git repository visualizer"

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
git2 = "0.18.0"
regex = "1.10.2"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
chrono = "0.4.31"
lazy_static = "1.4.0"
